--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ script:
   docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
   docker push $REPO;
   docker push $REPO:$TRAVIS_TAG;
-  docker rmi -f $REPO $REPO:$TRAVIS_TAG
+  docker rmi -f $REPO $REPO:$TRAVIS_TAG;
   fi
